--- a/login/templates/base.html
+++ b/login/templates/base.html
@@ -36,7 +36,8 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="my-nav">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/index/">主页</a></li>
+              <li class={{ request.session.index_active }}><a href="/index/">主页</a></li>
+              <li class={{ request.session.detect_active }}><a href="/detect/">人脸检测</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
               {% if request.session.is_login %}
